--- a/loop/index.html
+++ b/loop/index.html
@@ -67,7 +67,7 @@ img {
 
 <p><img src="google_train.png" alt="Google Train">
 
-<p>National rail says change train, but it's the same train, so it's the better, but could do with a note:
+<p>National rail says change train, but it's the same train, so it's better, but it could do with a note:
 
 <p><img src="national_rail.png" alt="National Rail">
 
